<resources>
    <string name="app_name">May I approach?</string>
    <string name="may_i_title">May I  Approach?</string>
    <string name="see_in_real_life">See in real life\nthen Approach❣</string>
    <string name="open_with_facebook">Open with facebook</string>
    <string name="title_activity_maps">Map</string>
    <string name="someone_is_interested">someone is interested in you</string>
    <string name="you_got_a_match">you got\na match❣</string>
    <string name="dont_waste_time">Don\'t waste time HERE!\nShe is waiting&#8230;\nAPPROACH❣</string>
    <string name="i_wanna_talk">I wanna talk&#8230;</string>
</resources>
