<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@color/gray_background">

    <ImageButton
        android:id="@+id/icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="?android:selectableItemBackground"
        android:src="@android:drawable/ic_lock_power_off"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/icon"
        android:textSize="55sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/may_i_title"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/heart_on_map"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/title"
        android:layout_centerInParent="true"
        android:src="@android:drawable/ic_media_ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/heart_on_map"
        android:layout_marginTop="15dp"
        android:textSize="45sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/see_in_real_life"
        android:gravity="center"/>

    <Button
        android:id="@+id/open_with_facebook"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/open_with_facebook"/>

</RelativeLayout>
